# camping-se-scraper

./: README.md  camping_sites.geojson  main.py  missing-campsites-in-osm.geojson  pyproject.toml  qgis_analysis.md
