[tool.poetry]
name = "camping.se_scraper"
version = "0.1.0"
description = "A web scraper for extracting camping site links using requests and BeautifulSoup."
authors = ["Your Name <your.email@example.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.3.0"
pydantic = "^2.9.2"
geopandas = "^1.0.1"
tqdm = "^4.66.5"
aiohttp = "^3.10.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
